--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cytoscape": "^3.32.0",
+    "cytoscape-fcose": "^2.2.0",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "cytoscape": "^3.23.0",
     "react-cytoscapejs": "^2.0.0",
-    "file-saver": "^2.0.5"
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
